# sonic-mgmt

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  pre-commit-setup.cfg  pyproject.toml  setup.cfg
.azure-pipelines/: run-test-elastictest-template.yml  test_plan.py
.azure-pipelines/baseline_test/: baseline.test.mgmt.public.master.yml  baseline.test.template.yml
.azure-pipelines/elastictest/baseline/: baseline.test.mgmt.public.master.yml
.hooks/pre_commit_hooks/: check_conditional_mark_sort.py
ansible/: TestbedProcessing.py  ansible.cfg  config_sonic_basedon_testbed.yml  recover_server.py  testbed-cli.sh  testbed-new.yaml  upgrade_sonic.yml  veos_vtb
ansible/group_vars/vm_host/: creds.yml
ansible/roles/test/files/ptftests/: dhcp_relay_test.py
ansible/roles/test/files/tools/loganalyzer/: loganalyzer.py
pre_commit_hooks/: check_yml_sort.py
tests/: conftest.py
tests/bgp/: test_bgpmon.py
tests/common/: utilities.py
tests/common/helpers/: gnmi_utils.py
tests/common/plugins/conditional_mark/: __init__.py  tests_mark_conditions.yaml
tests/platform_tests/broadcom/: test_ser.py
tests/tacacs/: test_ro_disk.py
