[metadata]
name = check-yml-sort
version = 1.0.13+pre_commit
description = Some hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xwjiang-ms/sonic-mgmt

[options]
packages = find:
package_dir =
    =pre_commit_hooks

[options.packages.find]
where = pre_commit_hooks
exclude =
    spytest*

[options.entry_points]
console_scripts =
    check-yml-sort = check_yml_sort:main
